[package]
name = "mercator_deformation_maps"
version = "0.1.0"
authors = ["Lionel Sambuc <lionel.sambuc@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0.42"

#csv = "^1.1"
memmap = "^0.7"
arrayref = "^0.3"
structopt = "^0.3"

reqwest = "0.9.22"

# Used to check validity of my conversions
byteorder = "1.3.2"

# Used for main.rs as integration test
measure_time = "^0.6" # To mesure parsing time, only required by binary

# Logging macros API
log = { version = "^0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "^0.3"       # Logger implementation
