[package]
name = "mercator_deformation_maps"
version = "0.1.0"
authors = ["Lionel Sambuc <lionel.sambuc@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "^0.3"
byteorder = "1.3.2"
memmap = "^0.7"

# Logging macros API
log = { version = "^0.4", features = ["max_level_trace", "release_max_level_trace"] }

[dev-dependencies]
pretty_env_logger = "^0.3"       # Logger implementation
# Used for integration tests
measure_time = "^0.6" # To mesure parsing time, only required by binary
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "^0.3"
reqwest = "0.9.22"
